# diagram-tool

./: .gitignore  EDGE_IMPROVEMENTS.md  NOTES.md  README.md  config.example.yaml  manifest.yaml  pyproject.toml  start-backend.sh  start-frontend.sh  start-service.sh  start.sh  trait_api.yaml  trait_configurable.yaml  trait_gui.yaml  trait_mcp-tools.yaml  trait_published.yaml  trait_systemd-service.yaml
backend/: diagram_manager.py  main.py
core/: __init__.py  layout.py  validation.py
frontend/: vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: diagramApi.ts
frontend/src/components/: Canvas.tsx  ContextMenu.tsx  Edge.tsx  Node.tsx  SidePanel.tsx  Toolbar.tsx
frontend/src/hooks/: useDiagram.ts  useWebSocket.ts
frontend/src/styles/: diagram.css
frontend/src/types/: diagram.ts
frontend/src/utils/: export.ts
mcp-server/: server.py  setup.sh
pkg/systemd/: diagram-tool.service
src/: cli.py
src/backend/: diagram_manager.py  main.py  models.py  websocket_manager.py
src/core/: analysis.py  models.py
src/diagram_tool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
